--- a/VehiculosGETCorp/settings.gradle
+++ b/VehiculosGETCorp/settings.gradle
@@ -1,14 +1,13 @@
 pluginManagement {
     repositories {
-        google {
-            content {
-                includeGroupByRegex("com\\.android.*")
-                includeGroupByRegex("com\\.google.*")
-                includeGroupByRegex("androidx.*")
-            }
-        }
+        google()
         mavenCentral()
         gradlePluginPortal()
+    }
+    plugins {
+        id 'com.android.application' version '8.4.0'
+        id 'com.android.library' version '8.4.0'
+        id "com.google.gms.google-services" version "4.3.15" apply false
     }
 }
 dependencyResolutionManagement {
@@ -19,5 +18,6 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "Vehiculos GET Corp"
+rootProject.name = "VehiculosGETCorp"
 include ':app'
+project(':app').projectDir = new File(rootDir, 'app')
